--- a/app/assets/stylesheets/casts.scss
+++ b/app/assets/stylesheets/casts.scss
@@ -17,11 +17,10 @@
   }
 
   .log-container, .log {
-    position: absolute;
-    right: 40px;
-    top: 60px;
-    width: 500px;
-    height: 500px;
+    position: relative;
+    margin: 0 10%;
+    width: 80%;
+    height: 80%;
     font-family: monospace;
     font-size: 10px;
     overflow: scroll;
